# apps/server/src/api/middlewares/validation-middleware.ts
@@ -2,12 +2,16 @@ import { NextFunction, Request, Response } from 'express'
 import { BAD_REQUEST, INTERNAL_SERVER_ERROR } from 'http-status'
 import { AnyZodObject, ZodError, ZodOptional } from 'zod'
 
-import { ErrorResponse } from '../shared'
+import { APIErrorResponse } from '../shared'
 
 function validationMiddleware(
   schema: AnyZodObject | ZodOptional<AnyZodObject>,
 ) {
-  return async (req: Request, res: Response, next: NextFunction) => {
+  return async (
+    req: Request,
+    res: Response,
+    next: NextFunction,
+  ): Promise<void> => {
     try {
       await schema.parseAsync({
         body: req.body,
@@ -21,22 +25,24 @@ function validationMiddleware(
         const context = error.errors.map((issue) => ({
           message: `${issue.path.join('.')} is ${issue.message}`,
         }))
-        const response: ErrorResponse = {
+        const response: APIErrorResponse = {
           message: message,
           details: { context: context, cause: error },
           isOperational: true,
         }
         res.status(BAD_REQUEST).json(response)
+        return
       }
 
       if (error instanceof Error) {
         const message = 'An error occurred when validating user inputs'
-        const response: ErrorResponse = {
+        const response: APIErrorResponse = {
           message: message,
           details: { context: 'unknown', cause: error },
           isOperational: true,
         }
         res.status(INTERNAL_SERVER_ERROR).json(response)
+        return
       }
     }
   }
